--- a/blog.Rmd
+++ b/blog.Rmd
@@ -2,24 +2,25 @@
 title: "Is editing an  IJERPH special issue a way to self publish?"
 author: "Frank Popham"
 date: "2023-05-02"
-output: html_document
+output:
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, include = FALSE)
 ```
 
 ### IJERPH - mega journal
 
-The [International Journal of Environmental Research and Public Health](https://www.mdpi.com/journal/ijerph) has grown rapidly in recent years. It now publishes so many papers [it is classed a mega journal](https://jamanetwork.com/journals/jama/article-abstract/2802853). Concerns have been raised about MDPI, IJERPH's publisher, [with debate about whether it is a predatory or not or something in-between](https://paolocrosetto.wordpress.com/2021/04/12/is-mdpi-a-predatory-publisher/).
+The [International Journal of Environmental Research and Public Health](https://www.mdpi.com/journal/ijerph) has grown rapidly in recent years. It now publishes so many papers [it is classed a mega journal](https://jamanetwork.com/journals/jama/article-abstract/2802853). Concerns have been raised about MDPI, IJERPH's publisher, [with debate about whether it is a predatory publisher or not or something in-between](https://paolocrosetto.wordpress.com/2021/04/12/is-mdpi-a-predatory-publisher/).
 
-### Trouble at mill
+### Impact trouble
 
 Recently, [Clarivate delisted IJERPH so it no longer has an "official" impact factor](https://www.science.org/content/article/fast-growing-open-access-journals-stripped-coveted-impact-factors). This is a big blow as researchers are often judged on the impact factor of the journal they publish in. So the higher the impact factor the better. For a mega journal in public health, IJERPH's impact factor was impressive, although there is evidence that this was due to [impact factor inflation](https://mahansonresearch.weebly.com/blog/mdpi-mega-journal-delisted-by-clarivate-web-of-science).
 
 ### Nothing special
 
-Publishing papers in special issues seems key to [MDPI's and IJERPH's growth](https://paolocrosetto.wordpress.com/2021/04/12/is-mdpi-a-predatory-publisher/). There is really nothing special about special issues in IJERPH as the majority of IJERPH's papers in 2022 were in special issues. One aspect yet (I think) to be explored is their use as a vehicle for self publication. A special issue is edited by the people who proposed its topic rather than the normal editors (although they may have input). It is not uncommon for IJEPHR editors to also author a paper in a special issue.
+Publishing papers in special issues seems key to [MDPI's and IJERPH's growth](https://paolocrosetto.wordpress.com/2021/04/12/is-mdpi-a-predatory-publisher/). There is really nothing special about special issues in IJERPH as the majority of IJERPH's papers in 2022 were in special issues. One aspect yet (I think) to be explored is the use of special issues to self publish. A special issue is edited by the people who proposed its topic rather than the normal editors (although they may have input). It is not uncommon for IJEPHR editors to also author a paper in a special issue.
 
 ```{r self}
 
@@ -27,11 +28,30 @@ library(tidyverse)
 
 # load file of editor / author connections
 
-ijerph_special_03_02_all <- read_rds("https://github.com/frankpopham/ijerph/blob/master/data/ijerph_special_03_02_all.RDS?raw=true")
+ijerph_special_03_02_df <- read_rds("https://github.com/frankpopham/ijerph/blob/master/data/ijerph_special_03_02_df.RDS?raw=true")
 
+ijerph_special_03_02_papers <- read_rds("https://github.com/frankpopham/ijerph/blob/master/data/ijerph_special_03_02_papers.RDS?raw=true")
+
+#variable for paper type
+ijerph_special_03_02_papers <- ijerph_special_03_02_papers  %>%
+  unnest_wider(pubtype, names_sep="_") 
+  
+ijerph_special_03_02_papers %>%
+  count(pubtype_1, pubtype_2, pubtype_3)  
+
+ijerph_special_03_02_papers <- ijerph_special_03_02_papers %>%
+  mutate(notpaper = case_when(pubtype_1=="Editorial" ~ 1, 
+                              pubtype_1=="Published Erratum" ~ 1,
+                              pubtype_2=="Comment" ~ 1,
+                              .default = 0)) 
+
+ijerph_special_03_02_df <- ijerph_special_03_02_df %>%
+  left_join(select(ijerph_special_03_02_papers, paper_doi, notpaper), by="paper_doi")
+  
 # editor an author on paper
 
-paper_results <- ijerph_special_03_02_all %>%
+paper_results <- ijerph_special_03_02_df %>%
+  filter(notpaper==0) %>%
   group_by(paper_titles) %>%
   summarise(seds=sum(editors), special_page=first(special_page)) %>%
   mutate(ynedspaper = ifelse(seds==0, 0, 1)) %>%
@@ -49,25 +69,38 @@ paper_results2 <- paper_results %>%
 
 ### Self publishing
 
-Obviously it is well recognised that if an editor is an author on a submitted paper to their journal (or special issue) then the editor should not be involved in decisions relating to their paper. [MDPI's guidelines are as follows:](https://www.mdpi.com/special_issues_guidelines)
+Obviously it is well recognised that if an editor is an author on a submitted paper to their journal (or special issue) then the editor should not be involved in decisions relating to that paper. [MDPI's guidelines are as follows:](https://www.mdpi.com/special_issues_guidelines)
 
 > **Editor's Submission:** The special issue may publish contributions from the Guest Editor(s), but the number of such contributions should be limited, to ensure the diversity and inclusiveness of authorship representing the research area of the Special Issue. Any article submitted by a Guest Editor will be handled by a member of the Editorial Board.
 
-I calculated that a fifth (`r round((paper_results2$special_papers/paper_results2$npapers)*100 , digits=1)`%) of all papers in special issues in IJEPHR have an editor as an author with three quarters (`r round((paper_results2$special_eds/paper_results2$nspecial)*100 , digits=1)`%) of special issues having at least one paper with an editor as an author . My calculations are based on analysis of all papers (`r paper_results2$npapers`) published in special issues (`r paper_results2$nspecial`) that closed for submissions from the start of 2022 to the end of March 2023. I was able to link authors and editors in special issues through their [Sciprofile](https://sciprofiles.com/) profile (an author network site run by MDPI on which each author and editor seems to have their own page).
+I calculated that a fifth (`r round((paper_results2$special_papers/paper_results2$npapers)*100 , digits=1)`%) of all papers (excluding editorials, comments, erratum and retractions) in special issues in IJEPHR have an editor as an author, with three quarters (`r round((paper_results2$special_eds/paper_results2$nspecial)*100 , digits=1)`%) of special issues having at least one paper with an editor as an author. My calculations are based on analysis of all papers (`r paper_results2$npapers`) published in special issues (`r paper_results2$nspecial`) that closed for submissions from the start of 2022 to the end of March 2023. I was able to link authors and editors in special issues through their [Sciprofile](https://sciprofiles.com/) profile (an author network site run by MDPI on which each author and editor seems to have their own page).
 
-```{r speed }
+```{r speed}
 library(ggridges)
+library(panelr)
+library(broom)
+library(broom.mixed)
 
-ijerph_special_03_02_papers <- read_rds("https://github.com/frankpopham/ijerph/blob/master/data/ijerph_special_03_02_papers.RDS?raw=true")
+paperedpaper <- ijerph_special_03_02_df %>%
+  filter(notpaper==0) %>%
+  group_by(paper_titles) %>%
+  summarise(seds=sum(editors), paper_doi=first(paper_doi)) %>%
+  mutate(ynedspaper = ifelse(seds==0, 0, 1)) %>%
+  ungroup() %>%
+  select(paper_doi, ynedspaper)
+
 
 ijerph_special_03_02_papers <- ijerph_special_03_02_papers %>%
+    filter(notpaper==0) %>%
+    left_join(paperedpaper, by="paper_doi") %>%
     mutate(across(received:medline, ~ymd_hm(.x))) %>%
-    mutate(rec_to_rev=as.period(received%--%revised, unit="day")) %>%
+    mutate(rec_to_rev= as.period(received%--%revised, unit="day")) %>%
     mutate(rec_to_rev=time_length(rec_to_rev, unit="days")) %>%
-    mutate(edsasauth=ifelse(noedsasauth==0, "No editor as author", "Editor as author"))
+    mutate(rec_to_rev=ifelse(is.na(rec_to_rev), time_length(as.period(received%--%accepted, unit="day"),
+                                                            unit="days"), rec_to_rev)) %>%
+  mutate(edsasauth=ifelse(ynedspaper==0, "No editor as author", "Editor as author"))
 
-ijerph_special_03_02_papers <- ijerph_special_03_02_papers %>%
-  filter(!is.na(rec_to_rev)) # 11147 to 10959 as 188 missing
+
 
 
 ijerph_special_03_02_papers %>%
@@ -79,14 +112,54 @@ ijerph_special_03_02_papers %>%
             sd(rec_to_rev))
 
 
-test34 <- ggplot(ijerph_special_03_02_papers, aes(x = rec_to_rev, y=edsasauth)) +
-  geom_density_ridges(scale = 1.2) +
-  xlab("Received to revision in days") +
-  ylab("")
-   position = "raincloud"jittered_points = TRUE,
+fig1 <- ggplot(ijerph_special_03_02_papers, aes(x = rec_to_rev, y=edsasauth)) +
+  geom_density_ridges(scale = 2,  rel_min_height=0.01) +
+  xlab("Days (scale right truncated)") +
+  ylab("") +
+  scale_x_continuous(limits = c(0, 120)) +
+  ggtitle("Figure 1 - Received to revision")
+
+
+
+crossmodel <- lm(rec_to_rev ~ ynedspaper,  data=ijerph_special_03_02_papers)
+
+crossmodel_ci <- tidy(crossmodel, conf.int = T)
+  
+ijerph_special_03_02_papers <- ijerph_special_03_02_papers %>%
+  group_by(special_page) %>%
+  mutate(specialid = cur_group_id()) %>%
+  mutate(specialt = row_number()) %>%
+  ungroup()
+
+paneldf <- panel_data(ijerph_special_03_02_papers, id=specialid, wave=specialt)
+
+withinmodel <- wbm(rec_to_rev~ynedspaper, model="within",  data=paneldf)
+
+withinmodel_ci <- tidy(withinmodel, conf.int = T)
+
 ```
 
 
 ### How fast?
 
-One would imagine that editor authored papers should go through peer review slower than other papers in special issues as their editing has to go to one of the editorial board. Following Prof Bishop work I claculated the time from 
+MDPI facilitates quick peer review. Prof Dorothy Bishop explored [Editor Response Time (RT)](https://psyarxiv.com/6mbgv) for some [Hindawi's journals](https://www.hindawi.com/). She found that special issue papers were reviewed much faster. This inspired me to look at IJERPH and I found review times for 2022 for special issues and non special issue papers for this journal were [similar](https://mastodon.scot/@PophamFrank/109988456500338864) (and similar to a Hindawi journal's special issue). I extend the analysis here - using my data from special issues that closed for submissions 2022/March 2023- to compare special papers where the editor is an author to where they are not. The average time from paper receipt to paper revision was `r round(crossmodel[["coefficients"]][["(Intercept)"]], 1)` days for papers where an editor was not an author and `r round(crossmodel[["coefficients"]][["(Intercept)"]]+crossmodel[["coefficients"]][["ynedspaper"]], 1)` days for where an editor was an author. That's a difference of `r round(crossmodel_ci$estimate[[2]], 2)`(95% CI, `r round(crossmodel_ci$conf.low[[2]], 2)` to `r round(crossmodel_ci$conf.high[[2]], 2)`). Comparing within special issues (i.e each paper to the mean of that special issue) - to account for differences between special issues - revealed that editor authored papers continued to have a lower turn around time `r round(withinmodel_ci$estimate[[2]], 2)`(95% CI, `r round(withinmodel_ci$conf.low[[2]], 2)` to `r round(withinmodel_ci$conf.high[[2]], 2)`). Figure 1 shows the distribution of times.
+
+```{r fig1, include=TRUE, warning=FALSE, message=FALSE}
+
+fig1
+
+```
+
+
+### Summary
+
+The majority of special issues feature editor authored papers. If anything the review process is speedier for such papers. What does this mean? I don't know really. Personally I am surprised at the level of self publishing and its speed (I would have thought that having to involve an usual editor would delay the process). My analysis may contain mistakes so you can view the code and the code used to construct the data set as well as the datasets (1 and 2).
+
+### Thanks
+
+[R](https://www.r-project.org/), [RStudio](https://posit.co/products/open-source/rstudio/), [tidyverse](https://www.tidyverse.org/), [broom](https://broom.tidymodels.org/), [broom.mixed,](https://github.com/bbolker/broom.mixed) [distill](https://rstudio.github.io/distill/), [panelr](https://panelr.jacob-long.com/), [ggridges](https://cran.r-project.org/web/packages/ggridges/vignettes/introduction.html),
+[glue](https://glue.tidyverse.org/)
+[rvest](https://rvest.tidyverse.org/)
+[rentrez](https://docs.ropensci.org/rentrez/)
+[RefManageR](https://github.com/ropensci/RefManageR/)
+[rcrossref](https://github.com/ropensci/rcrossref)
